--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
